Use subordinate blocks in Pug

--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -1,6 +1,8 @@
 block header
     head
-        title Library with Pug
+        block header__title
+            title Library with Pug
+        link(rel="stylesheet" href="styles/app.css" type="text/css")
     h1 Header
 block body
 h1 Footer
