--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -4,5 +4,10 @@ block header
             title Library with Pug
         link(rel="stylesheet" href="styles/app.css" type="text/css")
     h1 Header
+    ul
+        block header__active
+            li.active one
+            li two
+            li three
 block body
 h1 Footer
