--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -4,5 +4,12 @@ block header
             title Library with Pug
         link(rel="stylesheet" href="styles/app.css" type="text/css")
     h1 Header
+    div.main-menu
+        ul
+            block header__active-page
+                a( href="/")
+                    li( class="active" ) Home
+                a( href="/admin/new-book")
+                    li New Book
 block body
 h1 Footer
