use layout template for all my pages

--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -2,7 +2,7 @@ block header
     head
         block header__title
             title Library with Pug
-        link(rel="stylesheet" href="styles/app.css" type="text/css")
+        link(rel="stylesheet" href="/styles/app.css" type="text/css")
     h1 Header
     div.main-menu
         ul
