Fixed Copyright Inscription

--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -20,7 +20,7 @@ block header
             div © Our Library 
                 span#footer-full-year
                 span 
-                span Всички права запазени. 
+                span All Rights Reserved. 
                 script.
                     var fullYear = document.getElementById( 'footer-full-year' )
                     fullYear.innerText = new Date().getFullYear()
